--- a/medias/elements/style.sass
+++ b/medias/elements/style.sass
@@ -161,10 +161,15 @@ sup
   font-style: italic
   color: #ccc
 
-p+ul li
+.article li
   padding-left: 2em
   &:before
     content: "– "
+
+.list li
+  padding-left: 0
+  &:before
+    content: ""
 
 // Head and foot
 
