Typo without capture tag

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,27 +36,7 @@
 
 {% if page.type != 'pages' %}<p class="date">{% include date.html date=page.date %}</p>{% endif %}
 
-{% assign content = content | split: '<pre' %}{% for parts in content %}{% capture hide %}
-{% assign part = parts | split: '</pre>' %}
-{% assign c = part.first %}
-{% assign t = part.last %}
-
-{% assign t = t | replace: '&#39;', '’' | replace: '~', '&nbsp;' %}
-{% assign t = t | replace: 'LaTeX', '<span class="latex">L<sup>a</sup>T<sub>e</sub>X</span>' %}
-{% assign t = t | replace: '[[', '<span class="as"></span><span class="br"> (</span><span class="mar">' %}
-{% assign t = t | replace: ']]', '</span><span class="br">)</span>' %}
-
-{% if page.lang == 'fr' %}
-  {% assign t = t | replace: '&ldquo;' , '«&#160;' | replace: '&rdquo;' , '&#160;»' %}
-  {% assign t = t | replace: ' :',       '&#160;:' | replace: ' %',       '&#160;%' %}
-  {% assign t = t | replace: ' ;', '<span style="white-space:nowrap">&thinsp;</span>;' %}
-  {% assign t = t | replace: ' !', '<span style="white-space:nowrap">&thinsp;</span>!' %}
-  {% assign t = t | replace @: ' ?', '<span style="white-space:nowrap">&thinsp;</span>?' %}
-{% endif %}
-
-{% endcapture %}
-{% if part.size == 2 %}<pre{{ c | newline_to_br | replace: "<br />", "</code><br /><code>" | strip_newlines | replace: "<code></code>", ""}}</pre>{% endif %}
-{{ t }}{% endfor %}
+{% include typo.html %}
 <hr/>
 </div>
 
