--- a/_includes/list.html
+++ b/_includes/list.html
@@ -3,7 +3,7 @@
     {% endcapture %}{% if currentmonth != month %}{% unless forloop.first %}
     </ul>
   </li>{% endunless %}
-  <li><h2>{% include date.html date=post.date mode="month"%}</h2>
+  <li><h2>{% include date.html date=post.date %}{{ month }} {{ year }}</h2>
     <ul>{% capture month %}{{currentmonth}}{% endcapture %}{% endif %}
       <li>
         <a href="{{ post.url }}">
