--- a/medias/elements/style.sass
+++ b/medias/elements/style.sass
@@ -248,6 +248,8 @@ code
   font-family: PT Sans, Calibri, Arial, sans
   color: #4D4E53
   line-height: 1.5
+  background: #f5f5f5
+  border: 3px solid #f5f5f5
 
 pre
   +padding($main,.5,.5,.75)
@@ -255,6 +257,9 @@ pre
   overflow-x: auto
   background: #f5f5f5
   border-left: 6px solid #eee
+
+  code
+    border: none
 
 .ge,.gs
   color: #93a1a1
