Adding original post date

--- a/_includes/date.html
+++ b/_includes/date.html
@@ -21,6 +21,8 @@
 
         {% if day == "1" %}
             {% capture sup %}<sup>er</sup>{% endcapture %}
+        {% else %}
+            {% capture sup %}{% endcapture %}
         {% endif %}
 
     {% endif %}
