--- a/medias/elements/style.sass
+++ b/medias/elements/style.sass
@@ -302,7 +302,7 @@ pre
 @media screen and (min-width: 1000px)
   .as:after
     content: "*"
-    color: #DDD
+    color: #ccc
   .br
     display: none
 
@@ -315,7 +315,7 @@ pre
     margin-left: 17em
     max-width: 16em
     text-align: left
-    color: #e0e0e0
+    color: #d4d4d4
 
     &:before
       content: "* "
