Adding Piwik analytics

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -80,5 +80,6 @@
   {{ site.data.translations[page.lang].created }} <span>{{ day }}{{ sup }} {{ month }} {{ year }}</span> {{ site.data.translations[page.lang].author }} <a href="http://sylvaindurand.org/">Sylvain Durand</a>.
 </div>
 
+<script type="text/javascript"> var _paq = _paq || []; _paq.push(['trackPageView']); _paq.push(['enableLinkTracking']); (function() { var u="//stats.durand.tf/"; _paq.push(['setTrackerUrl', u+'piwik.php']); _paq.push(['setSiteId', 15]); var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0]; g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s); })(); </script><noscript><p><img src="//stats.durand.tf/piwik.php?idsite=15" style="border:0;" alt="" /></p></noscript>
 </body>
 </html>
